<resources>
    <string name="app_name">TicTacToe</string>
    <string name="action_settings">Settings</string>

    <string name="cross">X</string>
    <string name="nought">O</string>

    <string name="game">Game</string>
    <string name="current_player">Current player</string>

    <string name="undo">Undo</string>

    <string name="game_over">Game over!</string>
    <string name="winner">Winner:</string>
    <string name="draw">Draw!</string>

    <string name="choose_mode">Choose mode</string>

    <string name="two_players">2 players</string>

    <string name="computer_opponents">Computer opponents</string>

    <string name="single_player_random">Random move</string>
    <string name="single_player_find_best_move_minimax">Find best move - minimax</string>

    <string name="choose_your_side">Choose your side</string>
    <string name="crosses">Crosses : X</string>
    <string name="noughts">Noughts : O</string>
    <string name="random">Random</string>
</resources>
