<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/size_48"
            android:fontFamily="sans-serif-medium"
            android:text="@string/choose_your_side"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text_24" />

        <TextView
            android:id="@+id/tvCrosses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_48"
            android:layout_marginTop="@dimen/size_32"
            android:layout_marginRight="@dimen/size_48"
            android:background="@drawable/clickable_rect_r8_gray_da_white"
            android:gravity="center"
            android:paddingTop="@dimen/size_8"
            android:paddingBottom="@dimen/size_8"
            android:text="@string/crosses"
            android:textColor="@color/blue_4d"
            android:textSize="@dimen/text_24"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvNoughts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_48"
            android:layout_marginTop="@dimen/size_24"
            android:layout_marginRight="@dimen/size_48"
            android:background="@drawable/clickable_rect_r8_gray_da_white"
            android:gravity="center"
            android:paddingTop="@dimen/size_8"
            android:paddingBottom="@dimen/size_8"
            android:text="@string/noughts"
            android:textColor="@color/blue_4d"
            android:textSize="@dimen/text_24"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvRandom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_48"
            android:layout_marginTop="@dimen/size_48"
            android:layout_marginRight="@dimen/size_48"
            android:background="@drawable/clickable_rect_r8_gray_da_white"
            android:gravity="center"
            android:paddingTop="@dimen/size_8"
            android:paddingBottom="@dimen/size_8"
            android:text="@string/random"
            android:textColor="@color/blue_4d"
            android:textSize="@dimen/text_24"
            android:textStyle="bold" />
    </LinearLayout>
</layout>