<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="currentPlayer"
            type="com.timkhakimov.tictactoe.game.model.Player" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:title="@string/game"
            app:titleTextColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/size_32"
            android:text="@string/current_player"
            android:textColor="@color/blue_4d"
            android:textSize="@dimen/text_16" />

        <TextView
            android:id="@+id/tvCurrentPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/blue_4d"
            android:textSize="@dimen/text_24"
            tools:text="X"
            app:playerMark="@{currentPlayer}"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvSpaces"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/board_horizontal_margin"
            android:layout_marginTop="@dimen/size_32"
            android:layout_marginRight="@dimen/board_horizontal_margin" />

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/size_32"
            android:textColor="@color/red_e0"
            android:textSize="@dimen/text_16"
            tools:text="Конец игры! Победитель : X" />

        <TextView
            android:id="@+id/tvUndo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/size_24"
            android:text="@string/undo"
            android:textColor="@color/blue_4d"
            android:textSize="@dimen/text_24" />
    </LinearLayout>
</layout>